<menu xmlns:android="http://schemas.android.com/apk/res/android" >

        <item
        android:id="@+id/ZacetnaLokacija"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/ZacetnaLokacija"/>
        
    <item
        android:id="@+id/Vsi"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Vsi"/>
    
    <item
        android:id="@+id/Samski"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/samski"/>
        
    <item
        android:id="@+id/zenske"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/zenske"/>
    
    <item
        android:id="@+id/moski"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/moski"/>


</menu>
