<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityStart" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/hello"
        android:textSize="25sp"
        android:textStyle="bold" />

        <Button
            android:id="@+id/ButtonPrijava"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="66dp"
            android:text="@string/prijava" />

        <Button
            android:id="@+id/ButtonReg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ButtonPrijava"
            android:layout_below="@+id/ButtonPrijava"
            android:layout_marginTop="45dp"
            android:text="@string/Reg" />

        <Button
            android:id="@+id/ButtonIzhod"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ButtonReg"
            android:layout_below="@+id/ButtonReg"
            android:layout_marginTop="43dp"
            android:text="@string/Izhod" />

</RelativeLayout>