<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/prijavaUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_x="39dp"
        android:layout_y="13dp"
        android:gravity="center"
        android:text="@string/prijavaUp"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ButtonNaZemljevid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="174dp"
        android:layout_x="19dp"
        android:layout_y="266dp"
        android:text="@string/naZemljevid" />

    <Button
        android:id="@+id/nazaj"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="174dp"
        android:layout_x="14dp"
        android:layout_y="354dp"
        android:text="@string/naStart" />

</AbsoluteLayout>
